--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "A rich-text editor build with TS and JS.",
   "main": "app.js",
   "scripts": {
-    "start": "lite-server",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --confing webpack.config.prod.js"
   },
   "repository": {
     "type": "git",
@@ -17,7 +18,13 @@
     "url": "https://github.com/o83213/lion-editor/issues"
   },
   "homepage": "https://github.com/o83213/lion-editor#readme",
-  "dependencies": {
-    "lite-server": "^2.6.1"
+  "devDependencies": {
+    "clean-webpack-plugin": "^3.0.0",
+    "lite-server": "^2.6.1",
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.7.2",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0"
   }
 }
