--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lite-server": "^2.6.1",
     "style-loader": "^1.1.3",
     "ts-loader": "^6.2.1",
+    "tsconfig-paths-webpack-plugin": "^3.5.2",
     "typescript": "^3.7.2",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
